# Telegram-bot-template

./: .env.example  README.md  app.py  pyproject.toml
bot/: config.ini  config.py  config_reader.py  states.py  template_engine.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: __init__.py  registration_middleware.py  resourses_middleware.py
bot/models/: enums.py  room.py  user.py
bot/routers/: __init__.py  commands.py  form.py  registration_router.py  user_router.py
bot/services/: database.py  registration_service.py  user_service.py
bot/utils/: generators.py
templates/: start.html
